--- a/pg/projects.html
+++ b/pg/projects.html
@@ -33,13 +33,13 @@
           </button>
     </div>
     <div class="maindiv">
-        <div class="leftDivBut">
+        <div style = "overflow-y: scroll;" class="leftDivBut">
             <div style="padding:6%;">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">
                             Проекты:
-                                <button id="addProject" style="margin-left: 64%;" 
+                                <button id="addProject" style="margin-left: 62%;" 
                                         type="button" class="btn btn-default btn-small" onclick="addProject('cache', '2')">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                     </button>
@@ -60,7 +60,7 @@
     </div>
    </div>
 
-    <div class="rightDiv">
+    <div style = "overflow-y: scroll;" class="rightDiv">
         <div style = "padding: 2%">
          <div id = 'cabinet' class="panel panel-default full-screen">
                     <div class="panel-heading">
