--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -647,7 +647,7 @@
                     </div>
                     <div style="margin-left: 65%;border: none;">
                     <button   type="button" class="btn btn-default btn-small ">
-                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                    <span class="badge" >x</span>
                                 </button>
                                 </div>
                     </div>
