--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 <script src="../git/js/jquery.cookie.js" type="text/javascript"></script>
 <script src="../git/js/jquery.session.js" type="text/javascript"></script>
 <script src="../git/js/session.js" type="text/javascript"></script>
+<script src="../git/js/app.js" type="text/javascript"></script>
 <link rel="stylesheet" href="../git/css/registration.css">
 <link
 	href="http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600"
