--- a/pg/projects.html
+++ b/pg/projects.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/project.css">
     <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css"
           rel="stylesheet"/>
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
@@ -17,9 +18,11 @@
     <script src="../js/session.js" type="text/javascript"></script>
     <script src="../js/translit.js" type="text/javascript"></script>
     <script src="../js/controllers/user-room-controller.js "></script>
+    <script src="../js/bootstrap.min.js "></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="../js/projects.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script src="../js/bootstrap.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
 </head>
 <body ng-app="cache"  ng-init="getCompanies()">
