--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <div class="left-panel">
+        <div class="left-panel" id="left-panel">
             <div id="pages-container" class="pages-container"></div>
             <div id="objects-attribute-container" class="object-container" name="objContainer">
                 <div class="gorizont objects-attr-list">
