some project changes

--- a/pg/projects.html
+++ b/pg/projects.html
@@ -34,7 +34,7 @@
                 <h3 id="userNameText" onclick="location.href='projects.html'">Селех Максим Михайлович</h3>
             </div>
         </div>
-          <button id="logOut" class="logoutButton" onclick="location.href='registration.html'">
+          <button id="logOut" class="logoutButton" onclick="location.href='../index.html'">
             <font class="sender">Выйти</font>
           </button>
     </div>
