--- a/index.html
+++ b/index.html
@@ -1,36 +1,12 @@
-<!--
-<h4 ng-model="alertzone"><font color=red>{{alertzone}}</font></h4>
-<form name="compCreateForm" style ="width:200px;" ng-model="company" ng-submit="create(company); company='';">
-    Имя<input type="text" ng-model="company.name"/>
-	Псевдоним <input type="text" ng-model="company.login"/>
-	Пароль <input type="password" ng-model="company.password"/>
-	Электронная почта <input type="text" ng-model="company.email"/>
-	Должность<input type="text" ng-model="company.jobTitle"/>
-	Место работы <input type="text" ng-model="company.workPlace"/>
-    <input type="submit" value="Добавить"/>
-</form>
-<br>
--->
 <!doctype html>
 <html ng-app>
 <head>
 <meta charset="UTF-8">
-
-<!--
-  Copyright (c) 2015 by Eric (http://codepen.io/ehermanson/pen/KwKWEv)
-  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-  -->
-
 <title>Login</title>
-
 <link
 	href="http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600"
 	rel="stylesheet" type="text/css">
-
 </style>
-
 <script>
 	window.console = window.console || function(t) {
 	};
@@ -47,11 +23,10 @@
 	}
 </script>
 <title>REST Academy</title>
-<script
+<!--<script
 	src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
-<script src="../git/js/registration.js" type="text/javascript"></script>
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>-->
 <script src="../git/js/jquery-2.1.3.min.js" type="text/javascript"></script>
 <script src="../git/js/angular.min.js" type="text/javascript"></script>
 <script src="../git/js/translit.js" type="text/javascript"></script>
@@ -59,6 +34,7 @@
 <script src="../git/js/jquery.session.js" type="text/javascript"></script>
 <script src="../git/js/session.js" type="text/javascript"></script>
 <script src="../git/js/app.js" type="text/javascript"></script>
+<script src="../git/js/registration.js" type="text/javascript"></script>
 <link rel="stylesheet" href="../git/css/registration.css">
 <link
 	href="http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600"
